2001-01-23  Akim Demaille  <akim@epita.fr>

	* configure.in: If this is a beta, dump the core of BUGS.
	* tests/base.at (AC_REQUIRE & AC_LANG): New test, currently failing.

2001-01-23  Akim Demaille  <akim@epita.fr>

	* autoscan.pl: Don't use `defined' to check whether an array is
	defined.
	Don't use parens with `defined'.

2001-01-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE): Be sure to quote hashes to
	avoid M4 thinking it's comments.

2001-01-23  Tim Van Holder  <tim.van.holder@pandora.be>

	* aclang.m4 (_AC_COMPILER_EXEEXT_O): Use
	AS_IF([AC_TRY_EVAL(ac_link)]) instead of AC_LINK_IFELSE to
	avoid depending on ac_exeext before it's found.
	(AC_PROG_CC, AC_PROG_CXX, AC_PROG_F77): Check for the
	executable extension BEFORE checking whether the compiler
	works, as that test depends on a correct ac_exeext.

2001-01-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE) <trap>: Typo.

2001-01-22  Pavel Roskin  <proski@gnu.org>

	* autoscan.pl: Use "use strict". Declare all global variables
	or make them private. Make all local variables private.
	(find_autoconf): New, moved some code from the top level.
	Use %ENV outside quotes to eliminate a warning.

2001-01-22  Tim Van Holder  <tim.van.holder@pandora.be>

	* acspecific.m4 (AC_PROG_LN_S): Detect DJGPP < 2.04, which only
	supports 'ln -s' for executables.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl ($dir, $autoconf): New.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl ($headers, $functions, $identifiers, $libraries):
	Also register locations of their requirement instead of a simple
	counter.
	(&check_configure_ac): Close TRACES.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl: Formatting changes.
	Check `configure.ac' or `configure.in' if present.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl (&wanted): Don't register `Makefile' when
	`Makefile.in' is present.
	Factor the simplification of $name.